cmake_minimum_required(VERSION 3.23)
project(NHCE_CPP)
set(CMAKE_CXX_STANDARD 23)
add_executable(NHCE_CPP main.cpp)
add_executable(NHCE_CPP_0 Day3/SwapTwoNumbers.cpp)
add_executable(NHCE_CPP_1 OOPs/BasicOOPs.cpp)
add_executable(NHCE_CPP_2 OOPs/OOPsWithConstructor.cpp)
add_executable(NHCE_CPP_3 OOPs/NameClash.cpp)
add_executable(NHCE_CPP_4 OOPs/PaddingAndGreedyAlignment.cpp)
add_executable(NHCE_CPP_5 LCMGCD.cpp)
add_executable(NHCE_CPP_6 OOPs/Encapsulation.cpp)
add_executable(NHCE_CPP_7 OOPs/Inheritance.cpp)
add_executable(NHCE_CPP_8 OOPs/Polymorphism.cpp)
add_executable(NHCE_CPP_9 OOPs/Overloading.cpp)
add_executable(NHCE_CPP_10 OOPs/BankingApplication.cpp)
add_executable(NHCE_CPP_11 OOPs/ExceptionExample.cpp)
add_executable(NHCE_CPP_12 OOPs/PrinterExceptions.cpp)
add_executable(NHCE_CPP_13 Day4/GroceryStore.cpp)
add_executable(NHCE_CPP_15 OOPs/FriendClass.cpp)
add_executable(NHCE_CPP_16 OOPs/FriendFunction.cpp)
add_executable(NHCE_CPP_17 Files/ReadFile.cpp)
add_executable(NHCE_CPP_18 Files/WriteFile.cpp)
add_executable(NHCE_CPP_19 DataStructures/LinearDataStructures/StacksAndQueues/StackUsingArray.cpp)
add_executable(NHCE_CPP_20 DataStructures/LinearDataStructures/StacksAndQueues/QueueUsingArray.cpp)
add_executable(NHCE_CPP_21 Algorithms/Searching/LinearSearch.cpp)
add_executable(NHCE_CPP_22 Algorithms/Searching/BinarySearch.cpp)
add_executable(NHCE_CPP_23 Algorithms/Searching/BinarySearchRecursion.cpp)
add_executable(NHCE_CPP_24 Problems/BinarySearchSquareRoot.cpp)
add_executable(NHCE_CPP_25 Problems/FirstLastAndTotalOccurrencesInArray.cpp)
add_executable(NHCE_CPP_26 Algorithms/Sorting/SelectionSort.cpp)
add_executable(NHCE_CPP_27 DMA.cpp)
add_executable(NHCE_CPP_28 Problems/MergeTwoSortedArrays.cpp)
add_executable(NHCE_CPP_29 Algorithms/Sorting/MergeSort.cpp)
add_executable(NHCE_CPP_30 Algorithms/Mixed/KadaneAlgoMaxSubarraySum.cpp)
add_executable(NHCE_CPP_31 Algorithms/Sorting/WaveSort.cpp)
add_executable(NHCE_CPP_32 Algorithms/Sorting/CountSort.cpp)
add_executable(NHCE_CPP_33 Algorithms/Sorting/RadixSort.cpp)
add_executable(NHCE_CPP_34 Algorithms/Sorting/QuickSort.cpp)
add_executable(NHCE_CPP_35 Problems/GreatestNumberFromAString.cpp)
add_executable(NHCE_CPP_36 DataStructures/LinearDataStructures/LinkedLists/SinglyLinkedList.cpp)
add_executable(NHCE_CPP_37 DataStructures/LinearDataStructures/LinkedLists/DoublyLinkedListTraversal.cpp)
add_executable(NHCE_CPP_38 DataStructures/LinearDataStructures/LinkedLists/CircularLinkedList.cpp)
add_executable(NHCE_CPP_39 StandardTemplateLibrary/STLStack.cpp)
add_executable(NHCE_CPP_40 StandardTemplateLibrary/STLQueue.cpp)
add_executable(NHCE_CPP_41 StandardTemplateLibrary/ReverseAQueue.cpp)
add_executable(NHCE_CPP_42 StandardTemplateLibrary/LinkedListPalindrome.cpp)
add_executable(NHCE_CPP_43 StandardTemplateLibrary/STLMap.cpp)
add_executable(NHCE_CPP_44 StandardTemplateLibrary/MapWithListOfStrings.cpp)
add_executable(NHCE_CPP_45 StandardTemplateLibrary/STLSets.cpp)
add_executable(NHCE_CPP_46 StandardTemplateLibrary/STL-UnorderedSets.cpp)
add_executable(NHCE_CPP_47 StandardTemplateLibrary/STLList.cpp)
add_executable(NHCE_CPP_48 StandardTemplateLibrary/STLForwardList.cpp)
add_executable(NHCE_CPP_49 StandardTemplateLibrary/STLVectors.cpp)
add_executable(NHCE_CPP_50 StandardTemplateLibrary/PushBackEmplaceBack.cpp)
add_executable(NHCE_CPP_51 StandardTemplateLibrary/UnionIntersectionCodingNinjas.cpp)
add_executable(NHCE_CPP_52 StandardTemplateLibrary/CommonInThreeVectors.cpp)
add_executable(NHCE_CPP_53 DataStructures/NonLinearDataStructures/Trees/BinaryTrees/Traversal/DFSTraversals.cpp)
add_executable(NHCE_CPP_54 DataStructures/NonLinearDataStructures/Trees/BinaryTrees/Traversal/LevelOrderTraversal-BreadthFirstSearch.cpp)
add_executable(NHCE_CPP_55 Problems/MirrorOfBinaryTree.cpp)
add_executable(NHCE_CPP_56 Problems/IdenticalTrees.cpp)
add_executable(NHCE_CPP_57 Problems/CodingNinjas.cpp)
add_executable(NHCE_CPP_58 Problems/MaxUsingTemplates.cpp)
add_executable(NHCE_CPP_59 DataStructures/NonLinearDataStructures/Trees/BST/BST-Implementation.cpp)
add_executable(NHCE_CPP_60 Problems/SortedArrayToBST.cpp)
add_executable(NHCE_CPP_61 DataStructures/NonLinearDataStructures/Trees/Trie/TrieImplementation.cpp)
add_executable(NHCE_CPP_62 Algorithms/BackTracking/RatInAMaze.cpp)
add_executable(NHCE_CPP_63 Algorithms/BackTracking/SubsetsOfArray.cpp)
add_executable(NHCE_CPP_64 Algorithms/BackTracking/SubsequencesOfAString.cpp)
add_executable(NHCE_CPP_65 Algorithms/BackTracking/PhoneKeypadProblem.cpp)
add_executable(NHCE_CPP_66 Algorithms/BackTracking/SolveSudoku.cpp)
add_executable(NHCE_CPP_67 DataStructures/NonLinearDataStructures/Trees/Heap/HeapImplementation.cpp)
add_executable(NHCE_CPP_68 DataStructures/NonLinearDataStructures/Trees/Heap/PriorityQueueSTL.cpp)
add_executable(NHCE_CPP_69 DataStructures/NonLinearDataStructures/Trees/Heap/PriorityQueueCustomComparator.cpp)